--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     Avalie investimentos e ajude a moldar o seu futuro investindo no Brasil!
     </p>
 <p>Você já ganhou <span>R$25,98</span> de bônus, que expira hoje.</p>
-<a href="https://comeceagoraa/inter/inter/" class="btn">COMEÇAR</a>
+<a href="https://comeceagoraa.github.io/inter/inter/" class="btn">COMEÇAR</a>
 </div>
 <div class="main__descricao">
 <h2>PARA SACAR É SÓ COMEÇAR A AVALIAR</h2>
